--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - express-mongo
   frontend:
     container_name: frontend
-    image: ikakaotsu/mealsandorders_frontend
+    image: ikakaotsu/mealsandorders_frontend:v1
     #build: frontend
     ports:
       - 8080:8080
@@ -33,7 +33,7 @@ services:
       - backend
   backend:
     container_name: backend
-    image: ikakaotsu/mealsandorders_backend
+    image: ikakaotsu/mealsandorders_backend:v1
     restart: always
     #build: backend
     volumes:
